Start adding some tests

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "pretest": "eslint .",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "license": "MIT",
   "devDependencies": {
