--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "particl",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "author": {
     "name": "Chris Campbell",
     "url": "https://github.com/quaelin"
   },
+  "keywords": [
+    "async",
+    "asynchronous",
+    "promise",
+    "promises"
+  ],
   "bugs": {
     "url": "https://github.com/quaelin/particl/issues"
   },
